# agentic-ai-apps

./: .gitignore  README.md
autogen/: requirements.txt  travel_guide.ipynb
crew_ai/debate/output/: decide.md  oppose.md  propose.md
crew_ai/debate/src/debate/: crew.py
crew_ai/financial_researcher/output/: report.md
crew_ai/it_team/: README.md  pyproject.toml
crew_ai/it_team/output/: accounts.py  accounts.py_design.md  app.py  test_accounts.py
crew_ai/it_team/src/it_team/: main.py
crew_ai/it_team/src/it_team/config/: agents.yaml
crew_ai/stock_picker/memory/: chroma.sqlite3  long_term_memory_storage.db
crew_ai/stock_picker/output/: decision.md  research_report.json  trending_companies.json
crew_ai/stock_picker/src/stock_picker/tools/: push_tool.py
langgraph/reflexion_agent/: chains.py  main.py  requirements.txt
langgraph/smart_assistant/: demo-app.ipynb
model_context_protocol/: mcp.ipynb
model_context_protocol/mcp-crash-course/servers/: langchain_client.py  math_server.py  weather_server.py
