[project]
name = "it_team"
version = "0.1.0"
description = "it_team using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.165.1,<1.0.0"
]

[project.scripts]
it_team = "it_team.main:run"
run_crew = "it_team.main:run"
train = "it_team.main:train"
replay = "it_team.main:replay"
test = "it_team.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
